fixed alignment bug on large screens (x-dim > 2048 pixels)

--- a/app/styles/timeline.scss
+++ b/app/styles/timeline.scss
@@ -14,6 +14,7 @@
     top: 0;
     bottom: 0;
     height: 100%;
+    width: 100%;
     .emuwebapp-timelineCanvasContainer {
         position: relative;
         float:left;
